# eventsource

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: event_echo.rs
src/: curl.rs  error.rs  event.rs  lib.rs  main.rs  reqwest.rs
tests/: reqwest.rs
tests/server/: mod.rs
