[package]
name = "eventsource"
version = "0.6.0"
authors = ["Lukas Werling <lukas.werling@gmail.com>"]
edition = "2018"

description = "Library for accessing EventSource/Server-Sent Events endpoints"
repository = "https://github.com/lluchs/eventsource"
license = "MIT"
keywords = ["http"]

[features]
default = ["with-reqwest"]

# Enable the reqwest-based client.
with-reqwest = ["reqwest", "thiserror"]

[dependencies]
thiserror = { version = "1.0.21", optional = true }
reqwest = { version = "0.10.4", features = ["blocking"], optional = true }
mime = "0.3.7"
